--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM/uW/GXfRK9huM05kijaXV",
+      "authorship_tag": "ABX9TyMY4iIhroARKT3l4iXEoOZU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -463,13 +463,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9vbqW7zOCIVb"
+        "id": "9vbqW7zOCIVb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "59a7bca2-8021-4e16-de48-ce70a9c130c7"
       },
       "source": [
         "print(\"Hello World!\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 111,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -479,50 +491,90 @@
       "source": [
         "cnt = 14000"
       ],
-      "execution_count": null,
+      "execution_count": 112,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "E02E30WDCcML"
+        "id": "E02E30WDCcML",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0a3f6e12-6e36-4874-fbe5-695295c74036"
       },
       "source": [
         "string = \"Hello World!\"\n",
         "print (string, \", Current COVID count is\", cnt)\n",
         "cnt += 10000"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 113,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World! , Current COVID count is 14000\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eXSebvV9Fan5"
+        "id": "eXSebvV9Fan5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "516e80f4-84e7-4f30-ddb8-e980c822e352"
       },
       "source": [
         "print (f\"{string}, current count is:\", cnt)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World!, current count is: 24000\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yJYLvPr1Gv00"
+        "id": "yJYLvPr1Gv00",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "00c2c835-8f95-4f0b-a261-8c4e576df418"
       },
       "source": [
         "sem_grade = 86.25\n",
         "name = \"\"\n",
         "print (\"Hello {}, your semestral grade is: {}\".format (name, sem_grade))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 125,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello , your semestral grade is: 86.25\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UPjZl-TnFvsg"
+        "id": "UPjZl-TnFvsg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ab6fa604-eeb9-4fc1-f662-3c93aaf9b30a"
       },
       "source": [
         "pg, mg, fg = 98, 85, 65\n",
@@ -531,8 +583,19 @@
         "\\n\\t {:.2%} for Midterms, and\\\n",
         "\\n\\t {:.2%} for Finals.\".format(pg, mg, fg))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The weights of your semestral grades are:\n",
+            "\t 9800.00% for Prelims\n",
+            "\t 8500.00% for Midterms, and\n",
+            "\t 6500.00% for Finals.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -548,18 +611,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hctl-ewmRiKK"
+        "id": "hctl-ewmRiKK",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "13591728-1a43-474b-c0ad-0d2b18917197"
       },
       "source": [
-        "name = input(\"Enter your name: \")\n",
+        "88name = input(\"Enter your name: \")\n",
         "pg = input(\"Enter prelim grade: \")\n",
         "mg = input(\"Enter midterm grade: \")\n",
         "fg = input(\"Enter final grade: \")\n",
         "sem_grade = None\n",
         "print (\"Hello {}, your semestral grade is: {}\".format(name, sem_grade))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 115,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your name: Alexzandrin\n",
+            "Enter prelim grade: 87\n",
+            "Enter midterm grade: 88\n",
+            "Enter final grade: 89\n",
+            "Hello Alexzandrin, your semestral grade is: None\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -582,7 +661,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0imDOw0OTAKw"
+        "id": "0imDOw0OTAKw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ebd5d2d5-ea9a-44dd-bbc2-d9e161e970d8"
       },
       "source": [
         "## while loops\n",
@@ -591,13 +674,35 @@
         "    print(f\"{i}\\t|\\t{j}\")\n",
         "    i += 1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 116,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\t|\t10\n",
+            "1\t|\t10\n",
+            "2\t|\t10\n",
+            "3\t|\t10\n",
+            "4\t|\t10\n",
+            "5\t|\t10\n",
+            "6\t|\t10\n",
+            "7\t|\t10\n",
+            "8\t|\t10\n",
+            "9\t|\t10\n",
+            "10\t|\t10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "93mSUlwRTqZI"
+        "id": "93mSUlwRTqZI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "b1544003-665d-4da6-b0b7-1f24f882a727"
       },
       "source": [
         "# for(int = 0; i=10; i++){\n",
@@ -608,13 +713,34 @@
         "for i in range(10):\n",
         "  print(i)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 117,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "bGR6XEOzYHWI"
+        "id": "bGR6XEOzYHWI",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c2568e2-bce8-4473-d92a-4420000f0c32"
       },
       "source": [
         "playlist = [\"Bahay Kubo\", \"Magandang Kanta\", \"Buko\"]\n",
@@ -622,8 +748,20 @@
         "for song in playlist: \n",
         "    print(song)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 118,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Now Playing:\n",
+            "\n",
+            "Bahay Kubo\n",
+            "Magandang Kanta\n",
+            "Buko\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -646,7 +784,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hc25MWM8Y0_L"
+        "id": "hc25MWM8Y0_L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "20607567-5433-43fc-e730-c4ce367ce455"
       },
       "source": [
         "num_1, num_2 = 14, 12\n",
@@ -657,8 +799,16 @@
         "else:\n",
         "    print(\"HUHU\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 119,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HOHO\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -682,20 +832,32 @@
         "def delete_user (userid):\n",
         "    print(\"Successfully deleted user: {}\".format(userid))"
       ],
-      "execution_count": null,
+      "execution_count": 120,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zM3DVXMsaTcF"
+        "id": "zM3DVXMsaTcF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "2d9eff6f-6af0-4bab-ebc2-54491a966a19"
       },
       "source": [
         "userid = 2020-100100\n",
         "delete_user(2020-100100)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully deleted user: -98080\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -705,7 +867,7 @@
       "source": [
         "addend1, addend2 = 5, 6"
       ],
-      "execution_count": null,
+      "execution_count": 124,
       "outputs": []
     },
     {
@@ -718,7 +880,7 @@
         "  sum = addend1 + addend2\n",
         "  return sum"
       ],
-      "execution_count": null,
+      "execution_count": 122,
       "outputs": []
     },
     {
@@ -728,12 +890,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0qKGbYb-dLsV",
-        "outputId": "d333aabc-ba7d-4edb-beb1-1be3f5816a86"
+        "outputId": "0a5ac8c4-7cfc-412c-b8c0-01cb4fde1cba"
       },
       "source": [
         "add(5, 4)"
       ],
-      "execution_count": null,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -743,7 +905,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 110
+          "execution_count": 123
         }
       ]
     }
