--- a/Assignment_2.ipynb
+++ b/Assignment_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment 2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMY4iIhroARKT3l4iXEoOZU",
+      "authorship_tag": "ABX9TyNkt3ayaDT7rrclDUDwqWNY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,6 +53,17 @@
       },
       "source": [
         "## Variables and Data Types"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XYJM5Romn5Zy"
+      },
+      "source": [
+        "### A variable can be thought of as a memory location that can hold values of a specific type. The value in a variable may change during the life of the program—hence the name “variable.”\n",
+        "\n",
+        "### In VBA, each variable has a specific data type, which indicates which type of data it may hold."
       ]
     },
     {
@@ -130,6 +141,15 @@
       },
       "source": [
         "### Arithmetic "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lerlOC4WoPci"
+      },
+      "source": [
+        "### Arithmetic operations is a branch of mathematics, that involves the study of numbers, operation of numbers that are useful in all the other branches of mathematics. It basically comprises operations such as Addition, Subtraction, Multiplication and Division."
       ]
     },
     {
@@ -461,6 +481,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IoyFmDNrodf9"
+      },
+      "source": [
+        "### The input is the number you feed into the expression, and the output is what you get after the look-up work or calculations are finished."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "9vbqW7zOCIVb",
@@ -652,6 +681,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "cF8Kk_i1osvR"
+      },
+      "source": [
+        "### A loop statement is a series of steps or sequence of statements executed repeatedly zero or more times satisfying the given condition is satisfied."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "pHO9qRjWS-FN"
       },
       "source": [
@@ -775,10 +813,28 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "BGs5QXdIo74l"
+      },
+      "source": [
+        "### Flow control is the process of managing the rate of data transmission between two nodes to prevent a fast sender from overwhelming a slow receiver."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Quq-wOKsYxcU"
       },
       "source": [
         "### Condition Statements"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KVrYsbwHpD7O"
+      },
+      "source": [
+        "### a statement that can be written in the form “If P then Q,” where P and Q are sentences. For this conditional statement, P is called the hypothesis and Q is called the conclusion."
       ]
     },
     {
