--- a/Assignment2_Calalang.ipynb
+++ b/Assignment2_Calalang.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Assignment2_Calalang.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkt3ayaDT7rrclDUDwqWNY",
+      "authorship_tag": "ABX9TyNBdsl1VjeV13RTnHz7cvnz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -52,7 +52,7 @@
         "id": "Cgha7XLWrbxO"
       },
       "source": [
-        "## Variables and Data Types"
+        "## Variables and Data Types [1]"
       ]
     },
     {
@@ -140,7 +140,7 @@
         "id": "RMBTPrIuyyie"
       },
       "source": [
-        "### Arithmetic "
+        "### Arithmetic [2]"
       ]
     },
     {
@@ -477,7 +477,7 @@
         "id": "vbkI-FmmB48p"
       },
       "source": [
-        "# Input and Output"
+        "# Input and Output [3]"
       ]
     },
     {
@@ -675,7 +675,7 @@
         "id": "8NjJb1eHSyu3"
       },
       "source": [
-        "## Looping Statements"
+        "## Looping Statements [4]"
       ]
     },
     {
@@ -807,7 +807,7 @@
         "id": "Va7x3HvwYqLY"
       },
       "source": [
-        "## Flow Control"
+        "## Flow Control [5]"
       ]
     },
     {
@@ -825,7 +825,7 @@
         "id": "Quq-wOKsYxcU"
       },
       "source": [
-        "### Condition Statements"
+        "### Condition Statements [6]"
       ]
     },
     {
@@ -963,6 +963,36 @@
           "metadata": {},
           "execution_count": 123
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "De_PVJkPqQZ-"
+      },
+      "source": [
+        "References:\n",
+        "\n",
+        "  [1] Variables and Data Types (2021) (https://www.oreilly.com/library/view/writing-word-macros/9781565927254/ch05s04.html#:~:text=A%20variable%20can%20be%20thought,of%20data%20it%20may%20hold.)\n",
+        "\n",
+        "  [2] Arithmetic (2021) (https://byjus.com/maths/arithmetic-operations/#:~:text=Arithmetic%20operations%20is%20a%20branch,%2C%20Subtraction%2C%20Multiplication%20and%20Division.)\n",
+        "\n",
+        "  [3] Input and Output (2021) (https://study.com/academy/lesson/determining-inputs-outputs-of-functions.html#:~:text=In%20mathematics%2C%20a%20function%20is,work%20or%20calculations%20are%20finished.)\n",
+        "\n",
+        "  [4] Looping Statements (https://www.chegg.com/homework-help/definitions/loop-statement-3#:~:text=A%20loop%20statement%20is%20a,the%20given%20condition%20is%20satisfied.&text=In%20programming%20languages%2C%20such%20as%20C%2C%20C%2B%2B%2C%20Java,While%20and%20Do%20loop%E2%80%9D%20statements.)\n",
+        "\n",
+        "  [5] Flow Control (https://en.wikipedia.org/wiki/Flow_control_(data))\n",
+        "\n",
+        "  [6] Condition Statments (https://math.libretexts.org/Bookshelves/Mathematical_Logic_and_Proof/Book%3A_Mathematical_Reasoning__Writing_and_Proof_(Sundstrom)/1%3A_Introduction_to_Writing_Proofs_in_Mathematics/1.1%3A_Statements_and_Conditional_Statements#:~:text=A%20conditional%20statement%20is%20a,true%20whenever%20P%20is%20true.)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FNgdvCznq3f_"
+      },
+      "source": [
+        "![image](https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1920px-Python-logo-notext.svg.png)"
       ]
     }
   ]
